removed unimplemented scenarios
